# aiagg

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  Makefile  README.md  docker-compose.yml  progress.md
backend/: .env.example  .env.test.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: articles.py  auth.py  health.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  models.py
backend/scripts/: create_test_db.py
backend/tests/: conftest.py  test_api_simple.py  test_auth.py  test_auth_comprehensive.py  test_database.py  test_dependencies.py  test_health_extended.py  test_integration.py.disabled  test_main.py  test_models.py  test_security_extended.py  test_unit.py
